Add tests and implementations for IYCoordinateCalculator and IShotVerifier.

--- a/CannonBall.Web.Tests/CannonBall.Web.Tests.csproj
+++ b/CannonBall.Web.Tests/CannonBall.Web.Tests.csproj
@@ -90,9 +90,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\DegreeCalculatorTest.cs" />
+    <Compile Include="Models\ShotVerifierTest.cs" />
     <Compile Include="Models\VelocityValidatorTest.cs" />
     <Compile Include="Models\AngleValidatorTest.cs" />
     <Compile Include="Models\XCoordinateCalculatorTest.cs" />
+    <Compile Include="Models\YCoordinateCalculatorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
