Add unit tests and implementation for IShotCounter.

--- a/CannonBall.Web.Tests/CannonBall.Web.Tests.csproj
+++ b/CannonBall.Web.Tests/CannonBall.Web.Tests.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\DegreeCalculatorTest.cs" />
+    <Compile Include="Models\ShotCounterTest.cs" />
     <Compile Include="Models\ShotVerifierTest.cs" />
     <Compile Include="Models\VelocityValidatorTest.cs" />
     <Compile Include="Models\AngleValidatorTest.cs" />
