--- a/CannonBall.Web/CannonBall.Web.csproj
+++ b/CannonBall.Web/CannonBall.Web.csproj
@@ -150,11 +150,13 @@
     <Compile Include="Models\DegreeCalculator.cs" />
     <Compile Include="Models\IDegreeCalculator.cs" />
     <Compile Include="Models\IRangeValidator.cs" />
+    <Compile Include="Models\IShotCounter.cs" />
     <Compile Include="Models\IShotVerifier.cs" />
     <Compile Include="Models\IVelocityValidator.cs" />
     <Compile Include="Models\IXCoordinateCalculator.cs" />
     <Compile Include="Models\IYCoordinateCalculator.cs" />
     <Compile Include="Models\RangeValidator.cs" />
+    <Compile Include="Models\ShotCounter.cs" />
     <Compile Include="Models\ShotVerifier.cs" />
     <Compile Include="Models\VelocityValidator.cs" />
     <Compile Include="Models\XCoordinateCalculator.cs" />
