Add unit tests and implementations for INumberGenerator and ITargetGenerator; add GWT text file to test project.

--- a/CannonBall.Web/CannonBall.Web.csproj
+++ b/CannonBall.Web/CannonBall.Web.csproj
@@ -149,15 +149,19 @@
     <Compile Include="Models\Coordinate.cs" />
     <Compile Include="Models\DegreeCalculator.cs" />
     <Compile Include="Models\IDegreeCalculator.cs" />
+    <Compile Include="Models\INumberGenerator.cs" />
     <Compile Include="Models\IRangeValidator.cs" />
     <Compile Include="Models\IShotCounter.cs" />
     <Compile Include="Models\IShotVerifier.cs" />
+    <Compile Include="Models\ITargetGenerator.cs" />
     <Compile Include="Models\IVelocityValidator.cs" />
     <Compile Include="Models\IXCoordinateCalculator.cs" />
     <Compile Include="Models\IYCoordinateCalculator.cs" />
+    <Compile Include="Models\NumberGenerator.cs" />
     <Compile Include="Models\RangeValidator.cs" />
     <Compile Include="Models\ShotCounter.cs" />
     <Compile Include="Models\ShotVerifier.cs" />
+    <Compile Include="Models\TargetGenerator.cs" />
     <Compile Include="Models\VelocityValidator.cs" />
     <Compile Include="Models\XCoordinateCalculator.cs" />
     <Compile Include="Models\YCoordinateCalculator.cs" />
