--- a/CannonBall.Web.Tests/CannonBall.Web.Tests.csproj
+++ b/CannonBall.Web.Tests/CannonBall.Web.Tests.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\DegreeCalculatorTest.cs" />
+    <Compile Include="Models\GameFlowTest.cs" />
     <Compile Include="Models\ShotCounterTest.cs" />
     <Compile Include="Models\ShotVerifierTest.cs" />
     <Compile Include="Models\TargetGeneratorTest.cs" />
